# category-classifier

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  api.py  config.py  main.py  model_registry.py  model_runtime.py  server.py
category_classifier/: __init__.py  artifacts.py  benchmark.py  cli.py  dataset.py  encoder.py  errors.py  evaluate.py  model.py  model_pack.py  predictor.py  preprocessing.py  runtime.py  training.py
notebooks/: training_walkthrough.ipynb
scripts/: batch_api_predictions.sh  setup-ssh-key.sh  update-server.sh  upload-model.sh
tests/: conftest.py  helpers.py  test_api_server.py  test_app_config.py  test_benchmark.py  test_dataset.py  test_prediction.py  test_preprocessing.py  test_split.py  test_training_smoke.py
