[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "category-classifier"
version = "0.1.0"
description = "Local transaction category classifier with train/predict/benchmark CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7",
  "numpy>=1.26",
  "sentence-transformers>=2.7",
  "tqdm>=4.66",
  "torch>=2.2",
]

[project.optional-dependencies]
train = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "scikit-learn>=1.4",
]
dev = [
  "jupyter>=1.0",
  "httpx>=0.27",
  "pytest>=8.0",
  "category-classifier[train]",
]
server = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.scripts]
category-classifier = "category_classifier.cli:main"
category-classifier-serve = "app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["category_classifier*", "app*"]

# On Linux (VM), use CPU-only torch to avoid bundled CUDA libs (~1 GB RAM overhead).
# macOS gets standard PyPI torch which includes MPS support.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
